# deep-learning-project

./: .gitignore  CMakeLists.txt  LICENSE  README.md
DIY/: CMakeLists.txt  customAlgo.hpp
DIY/functions/: customPolicy.hpp
Task/include/monocopter/: MonocopterControl.hpp
Task/include/monocopter/visualizer/: Monocopter_Visualizer.hpp
Task/include/quadrotor/: QuadrotorControl.hpp
Task/include/quadrotor/visualizer/: Quadrotor_Visualizer.hpp
Task/include/quadwithreference/: QuadrotorControl.hpp
Task/include/quadwithreference/visualizer/: QuadrotorTrack_Visualizer.hpp
Task/include/slungload/: slungloadControl.hpp  slungloadControl_partial.hpp
Task/include/slungload/visualizer/: slungload_Visualizer.hpp
Task/src/monocopter/: CMakeLists.txt
Task/src/monocopter/visualizer/: Monocopter_Visualizer.cpp
Task/src/quadrotor/: CMakeLists.txt
Task/src/quadwithreference/: CMakeLists.txt
Task/src/slungload/: CMakeLists.txt
applications/monocopterwithTRPO/: CMakeLists.txt  monocopter_TRPO.cpp
applications/quadrotorTrajectoryTracking/: quadrotor_TRPO.cpp
applications/quadrotorwithPPO/: CMakeLists.txt  quadrotor_PPO.cpp
applications/quadrotorwithTRPO/: CMakeLists.txt  quadrotor_TRPO.cpp
applications/quadrotorwithTrajectoryTracking/: CMakeLists.txt  quadrotor_Tracking.cpp
applications/slungloadwithPPO/: CMakeLists.txt  slungload_PPO.cpp
applications/slungloadwithRPPO/: CMakeLists.txt  slungload_RPPO.cpp
applications/slungloadwithTRPO/: CMakeLists.txt  slungload_TRPO.cpp
quadrotorwithTRPO/: CMakeLists.txt  main.cpp
(+3 files in other folders)
